--- a/easy-react-accordion/src/index.css
+++ b/easy-react-accordion/src/index.css
@@ -24,6 +24,7 @@ header {
   align-content: center;
   padding: 15px;
   background-color: #3c3c3c;
+  border-bottom: 3px solid #56e3b8;
 }
 
 header h1 {
@@ -37,29 +38,6 @@ header h1 {
   width: 100%;
   max-width: 768px; /* iPad size */
   margin: 0 auto;
-  padding: 25px;
-}
-
-/* header {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  padding: 15px;
-  background-color: #3c3c3c;
-  border-bottom: 3px solid #56e3b8;
-}
-
-header h1 {
-  color: #eee;
-  font-size: 28px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.faqs {
-  width: 100%;
-  max-width: 768px;
-  margin: 0 auto;
   padding: 15px;
 }
 
@@ -68,15 +46,15 @@ header h1 {
   padding: 15px;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10 rgba(0, 0, 0, 0.2);
 }
 
 .faqs .faq .faq-question {
   position: relative;
+  /* we are adding position relative because we are gonna add an after to this faq with position absolute inside of the faq question */
   font-size: 20px;
   padding-right: 80px;
-
-  transition: all 0.4s ease;
+  transition: all 0.4 ease;
 }
 
 .faqs .faq .faq-question::after {
@@ -87,19 +65,19 @@ header h1 {
   transform: translateY(-50%);
   width: 30px;
   height: 30px;
-
   background-image: url('./arrow-down-mint.svg');
   background-position: center;
-  background-size: contain;
+  background-size: contain; /* we don't want it to overflow */
   background-repeat: no-repeat;
-
-  transition: all 0.4s ease-out;
+  transition: all 0.4s ease;
 }
 
 .faqs .faq .faq-answer {
   opacity: 0;
-  max-height: 0;
+  max-height: 0; /* because we cant animate height to auto */
   overflow-y: hidden;
+  /* display: none */
+  /* the reason why he haven'T a display none is because you want to animate it growing bigger in and not just jumping straight in */
   transition: all 0.4s ease-out;
 }
 
@@ -112,6 +90,6 @@ header h1 {
 }
 
 .faqs .faq.open .faq-answer {
-  max-height: 1000px;
+  max-height: 1000px; /* because we cant animate height to auto */
   opacity: 1;
-} */
+}
